--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;900&display=swap');
 
+@import url('https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js');
+
 /*General style */
 *{
     margin: 0;
