--- a/index.css
+++ b/index.css
@@ -2,8 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;900&display=swap');
 
-@import url('https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js');
-
 /*General style */
 *{
     margin: 0;
@@ -130,16 +128,8 @@ font-family: 'Rubik', sans-serif;
   padding-bottom:40px;
 }
 .main_content{
-padding-left :270px;
-}
-.background{
-position: absolute;  
-display: block;  
-top: 0;  
-left: 0;  
-z-index: 0;
-}
- /* background: linear-gradient(-45deg, #ee7752, #f04d8b, #23bfd0, #23d5ab);
+  padding-left :270px;
+  background: linear-gradient(-45deg, #ee7752, #f04d8b, #23bfd0, #23d5ab);
   background-size: 200% 200%;
   animation: gradient 10s ease infinite;
 
@@ -154,7 +144,7 @@ z-index: 0;
 	100% {
 		background-position:  100% 0%;
 	}
-}*/
+}
 
 .container{
     max-width: 1100px;
